<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/settings_title">

  <net.usikkert.kouchat.android.component.ThemedEditTextPreference
      android:key="@string/settings_key_nick_name"
      android:title="@string/settings_nick_name_title"
      android:summary="@string/settings_nick_name_summary"
      android:maxLength="10"
      android:dialogTitle="@string/settings_nick_name_title"
      android:dialogMessage="@string/settings_nick_name_dialog_message"
      android:dialogIcon="@drawable/ic_dialog"/>

  <CheckBoxPreference
    android:key="@string/settings_wake_lock_key"
    android:title="@string/settings_wake_lock_title"
    android:summary="@string/settings_wake_lock_summary"/>

</PreferenceScreen>
